# pretix-waitlist-manager

./: .gitignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg
pretix_waitlist_manager/: .gitignore  __init__.py  apps.py  data_provider.py  forms.py  import_service.py  navigation.py  randomize_service.py  service_helpers.py  service_types.py  services.py  urls.py  views.py
pretix_waitlist_manager/static/pretix_waitlist_manager/: waitlist_manager.js
pretix_waitlist_manager/templates/pretix_waitlist_manager/: import_page.html  import_preview.html  manager_page.html  preview_pagination.html  randomize_page.html  randomize_preview.html
tests/: test_forms_views.py  test_main.py
